gatekeeper/constraints/disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork
metadata:
  name: disallow-host-network
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "argo-rollouts", "cosign-system", "external-secrets", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
