gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRootUser
metadata:
  name: disallow-root-user
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "argo-rollouts", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
