gatekeeper/constraints/max-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: max-replicas-five
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "argo-rollouts", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
  parameters:
    max: 5
