gatekeeper/constraints/require-container-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredContainerLimits
metadata:
  name: require-container-limits
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
